# winkerberos

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  bump-and-tag.sh  ez_setup.py  kerberos-test.py  pyproject.toml  pyrightconfig.json  requirements.txt  sbom.json  setup.py
.evergreen/: assign-pr-reviewer.sh  config.yml  run-tests.sh  setup.sh
.github/: CODEOWNERS
.github/actions/authorized-pub/: action.yml
.github/actions/bump/: action.yml
.github/actions/commit/: action.yml
.github/actions/git-sign/: action.yml
.github/actions/gpg-sign/: action.yml
.github/actions/publish/: action.yml
.github/actions/python-bump-and-tag/: action.yml
.github/actions/python-publish/: action.yml  publish.sh
.github/actions/setup/: action.yml  setup.sh
.github/actions/sign/: action.yml
.github/actions/tag/: action.yml
.github/scripts/: bump-version.sh
.github/workflows/: build.yml  bump-version.yml  codeql.yml  dist.yml  post-release.yml  release-python.yml  release.yml
doc/: changelog.rst  conf.py  index.rst  make.bat  winkerberos.rst
scripts/: generate-signatures.sh
src/: base64.c  base64.h  kerberos_sspi.c  kerberos_sspi.h  winkerberos.c
test/: test_winkerberos.py
