[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "winkerberos"
version = "0.12.2"
description = "High level interface to SSPI for Kerberos client auth"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Bernie Hackett", email = "bernie@mongodb.com" },
]
keywords = [
    "GSSAPI",
    "Kerberos",
    "SSPI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mongodb-labs/winkerberos"
